# statesman

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  statesman.py  statesman_test.py  tasks.py
.github/workflows/: pre-commit.yaml  release.yml  test.yaml
