[tool.poetry]
name = "statesman"
version = "0.1.0"
description = "A modern state machine library."
authors = ["Blake Watters <blake@opsani.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-asyncio = "^0.14.0"
devtools = "^0.6.1"
pytest-mock = "^3.3.1"
isort = "^5.6.4"
invoke = "^1.4.1"
flakehell = "^0.7.0"
autoflake = "^1.4"
nitpick = "^0.23.1"
mccabe = "^0.6.1"
pycodestyle = "^2.6.0"
pyflakes = "^2.2.0"
pytest-cov = "^2.10.1"
flake8-pytest-style = "^1.3.0"
flake8-fixme = "^1.1.1"
flake8-isort = "^4.0.0"
flake8-docstrings = "^1.5.0"
flake8-markdown = "^0.2.0"
pre-commit = "^2.8.2"
pydocstyle = "^5.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
known_first_party = "statesman_test.py"
src_paths = ["statesman.py"]

[tool.nitpick]
style = "nitpick-style.toml"

[tool.flakehell]
base = "https://raw.githubusercontent.com/life4/flakehell/master/pyproject.toml"
exclude = ["README.md", "tasks.py", "statesman_test.py"]
format = "grouped"
max_line_length = 120
show_source = true

[tool.flakehell.plugins]
pycodestyle = ["+*"]
pyflakes = ["+*"]
nitpick = ["+*"]
mccabe = ["+*"]

# enable everything that starts from `flake8-`
"flake8-*" = ["+*"]

# disable pylint -- raising mysterious errors
pylint = ["-*"]

[tool.flakehell.exceptions."statesman_test.py"]
pycodestyle = ["-*"]
pyflakes = ["-*"]
flake8-docstrings = ["-*"]
