[tool.poetry]
name = "statesman"
version = "1.0.1"
description = "A modern state machine library."
authors = ["Blake Watters <blake@opsani.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/opsani/statesman"
repository = "https://github.com/opsani/statesman"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
devtools = "^0.6.1"
pytest-mock = "^3.3.1"
isort = "^5.6.4"
invoke = "^1.4.1"
flakehell = "^0.7.0"
autoflake = "^1.4"
mccabe = "^0.6.1"
pycodestyle = "^2.6.0"
pyflakes = "^2.2.0"
pytest-cov = "^2.10.1"
flake8-pytest-style = "^1.3.0"
flake8-fixme = "^1.1.1"
flake8-isort = "^4.0.0"
flake8-docstrings = "^1.5.0"
flake8-markdown = "^0.2.0"
pre-commit = "^2.8.2"
pydocstyle = "^5.1.1"
flake8-commas = "^2.0.0"
autopep8 = "^1.5.4"
add-trailing-comma = "^2.0.1"
pyformat = "^0.7"
pylint = "^2.6.0"
flake8-quotes = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "google" # "black"
line_length = 120
src_paths = ["statesman.py", "statesman_test.py"]

[tool.flakehell]
base = "https://raw.githubusercontent.com/life4/flakehell/master/pyproject.toml"
exclude = ["README.md"]
format = "grouped"
max_line_length = 120
show_source = true

[tool.flakehell.plugins]
pycodestyle = ["+*"]
pyflakes = ["+*"]
mccabe = ["+*"]

# enable everything that starts from `flake8-`
"flake8-*" = ["+*"]

[tool.flakehell.exceptions."statesman_test.py"]
pycodestyle = ["-*"]
pyflakes = ["-*"]
flake8-docstrings = ["-*"]
