[tool.poetry]
name = "statesman"
version = "1.0.5"
description = "A modern state machine library."
authors = ["Blake Watters <blake@opsani.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/opsani/statesman"
repository = "https://github.com/opsani/statesman"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pydantic = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.0"
devtools = "^0.6.1"
pytest-mock = "^3.10.0"
isort = "^5.8.0"
invoke = "^1.4.1"
flakehell = "^0.9.0"
autoflake = "^1.4"
mccabe = "^0.6.1"
pycodestyle = "^2.6.0"
pyflakes = "^2.2.0"
pytest-cov = "^4.0.0"
flake8-pytest-style = "^1.4.2"
flake8-fixme = "^1.1.1"
flake8-isort = "^4.0.0"
flake8-docstrings = "^1.5.0"
flake8-markdown = "^0.2.0"
pre-commit = "^3.1.1"
pydocstyle = "^5.1.1"
flake8-commas = "^2.0.0"
autopep8 = "^1.5.4"
add-trailing-comma = "^2.1.0"
pyformat = "^0.7"
pylint = "^2.6.0"
flake8-quotes = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "google" # "black"
line_length = 120
src_paths = ["statesman.py", "statesman_test.py"]

[tool.flakehell]
base = "https://raw.githubusercontent.com/life4/flakehell/master/pyproject.toml"
exclude = ["README.md"]
format = "grouped"
max_line_length = 120
show_source = true

[tool.flakehell.plugins]
pycodestyle = ["+*"]
pyflakes = ["+*"]
mccabe = ["+*"]

# enable everything that starts from `flake8-`
"flake8-*" = ["+*"]

[tool.flakehell.exceptions."statesman_test.py"]
pycodestyle = ["-*"]
pyflakes = ["-*"]
flake8-docstrings = ["-*"]
